[gd_scene load_steps=27 format=3 uid="uid://055cq1x7gheq"]

[ext_resource type="Script" uid="uid://c5syu518p1yxx" path="res://entities/plant/code/plant.gd" id="1_uix6i"]
[ext_resource type="Texture2D" uid="uid://cpf8nw0ikkbhj" path="res://entities/plant/art/plantGreen_1.png" id="2_mx1je"]
[ext_resource type="ArrayMesh" uid="uid://co6fxkv14orlb" path="res://entities/plant/mesh/pot_mesh.res" id="3_kiq7s"]
[ext_resource type="Texture2D" uid="uid://c8bc5v6kw6son" path="res://entities/plant/art/dry-dirt1-albedo.png" id="3_tv58q"]
[ext_resource type="Texture2D" uid="uid://cc2viouel6rcg" path="res://entities/plant/art/dry-dirt1-normal2.png" id="4_rj2vr"]
[ext_resource type="Texture2D" uid="uid://u77fcft1ntod" path="res://entities/plant/art/dry-dirt1-roughness.png" id="5_6kgjx"]
[ext_resource type="Texture2D" uid="uid://cnem6wwq3a8w" path="res://entities/plant/art/blackSmoke00.png" id="6_k0luw"]
[ext_resource type="AudioStream" uid="uid://jm7ldwbe60mk" path="res://environment/sound/fryer.ogg" id="7_rj2vr"]
[ext_resource type="AudioStream" uid="uid://d2tabt27g0sma" path="res://environment/sound/dirt_pour.ogg" id="8_6kgjx"]
[ext_resource type="Script" uid="uid://begs4u6hlc8rd" path="res://entities/plant/code/debug_ui.gd" id="10_7dkou"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uix6i"]
albedo_color = Color(0.499144, 0.286566, 0.181366, 1)
metallic_specular = 0.36
roughness = 0.61

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kiq7s"]
albedo_texture = ExtResource("3_tv58q")
roughness_texture = ExtResource("5_6kgjx")
roughness_texture_channel = 4
normal_enabled = true
normal_texture = ExtResource("4_rj2vr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tv58q"]
transparency = 1
albedo_color = Color(0, 1, 1, 0.541176)
metallic_specular = 1.0
roughness = 0.24

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rj2vr"]
emission_shape_scale = Vector3(0.06, 0.01, 0.065)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 460.5
direction = Vector3(0, 1, 0)
spread = 30.0
initial_velocity_min = 0.4
initial_velocity_max = 0.5
gravity = Vector3(0, -1.5, 0)

[sub_resource type="SphereMesh" id="SphereMesh_6kgjx"]
radius = 0.003
height = 0.006
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rj2vr"]
albedo_color = Color(0.690557, 0, 0.29972, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6kgjx"]
emission_shape_scale = Vector3(0.15, 0.15, 0.15)
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 0.03, 0)
scale_min = 0.5
scale_max = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_k0luw"]
size = Vector3(0.005, 0.005, 0.005)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k0luw"]
emission_shape_scale = Vector3(0.15, 0.15, 0.15)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.02, 0)
scale_min = 0.5
scale_max = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7dkou"]
transparency = 1
blend_mode = 2
shading_mode = 2
disable_ambient_light = true
albedo_texture = ExtResource("6_k0luw")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_7dkou"]
material = SubResource("StandardMaterial3D_7dkou")
size = Vector2(0.03, 0.03)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uix6i"]
height = 0.258301
radius = 0.152832

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vbvo"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dkou"]
bg_color = Color(0.214411, 0.554373, 1.27065e-05, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrmtl"]
bg_color = Color(0.564658, 0.649476, 1.92523e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63xb3"]
bg_color = Color(0.225422, 0.610541, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Plant" type="Area3D" groups=["plant"]]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
collision_mask = 0
script = ExtResource("1_uix6i")

[node name="Pot" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.508661, 0, 0, 0, 0.508661, 0, 0, 0, 0.508661, 0, 0.0201853, -0.00015937)
mesh = ExtResource("3_kiq7s")
surface_material_override/0 = SubResource("StandardMaterial3D_uix6i")
surface_material_override/1 = SubResource("StandardMaterial3D_kiq7s")

[node name="WaterParticles" type="GPUParticles3D" parent="Pot"]
unique_name_in_owner = true
transform = Transform3D(1.96595, 0, 0, 0, 1.96595, 0, 0, 0, 1.96595, -0.00160011, 0.110491, -0.0307345)
material_override = SubResource("StandardMaterial3D_tv58q")
cast_shadow = 0
emitting = false
amount = 10
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_rj2vr")
draw_pass_1 = SubResource("SphereMesh_6kgjx")

[node name="DryParticles" type="GPUParticles3D" parent="Pot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.123589, 0)
material_override = SubResource("StandardMaterial3D_rj2vr")
emitting = false
amount = 20
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_6kgjx")
draw_pass_1 = SubResource("BoxMesh_k0luw")

[node name="BurnParticles" type="GPUParticles3D" parent="Pot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.123589, 0)
emitting = false
amount = 50
lifetime = 3.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_k0luw")
draw_pass_1 = SubResource("QuadMesh_7dkou")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.607127, 0, 0, 0, 0.601116, 0, 0, 0, 1.26835, 0, 0.0787779, -0.000654334)
offset = Vector2(0, 22)
modulate = Color(0, 0.968393, 0, 1)
pixel_size = 0.001
billboard = 1
texture_filter = 0
texture = ExtResource("2_mx1je")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.508661, 0, 0, 0, 0.508661, 0, 0, 0, 0.508661, 0, 0.0242834, -0.00015937)
shape = SubResource("CylinderShape3D_uix6i")
debug_fill = false

[node name="FryingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_rj2vr")
volume_db = -30.0
max_distance = 1.0

[node name="WateredSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_6kgjx")
volume_db = -5.0
max_distance = 2.0

[node name="DebugUI" type="CanvasLayer" parent="."]
script = ExtResource("10_7dkou")

[node name="Background" type="PanelContainer" parent="DebugUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -298.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = 216.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vbvo")

[node name="MarginContainer" type="MarginContainer" parent="DebugUI/Background"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7dkou")
value = 50.0

[node name="Label2" type="Label" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sunshine"
horizontal_alignment = 1

[node name="SunBar" type="ProgressBar" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hrmtl")
value = 50.0

[node name="Label3" type="Label" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Water"
horizontal_alignment = 1

[node name="WaterBar" type="ProgressBar" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_63xb3")
value = 50.0

[node name="CheckBox" type="CheckBox" parent="DebugUI/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Fully Grown?"
alignment = 1
